# Maple_challenge

./: .env  .gitignore  .replit  README.md  chat_service.py  chunker.py  enhanced_chat.py  enhanced_scraper.py  index.html  livekit_agent_plugin.py  livekit_service.py  main.py  package-lock.json  package.json  pyproject.toml  scraper.py  simple_voice_agent.py  simple_web_voice.py  start_voice_agent.py  vector_store.py  vector_store_data_chunks.pkl  vector_store_data_index.faiss  vite.config.js  voice_agent.py  voice_assistant.py
backend/: chat_service.py  chunker.py  embeddings.py  enhanced_scraper.py  livekit_service.py  main.py  models.py  services.py  simple_voice_agent.py  suppress_asyncio_tracebacks.py  vector_store.py
backend/routes/: chat.py  scrape.py  voice.py
src/: App.jsx  ChatMode.jsx  Header.jsx  ScrapeMode.jsx  SiteDetails.jsx  SiteMapGraph.jsx  VoiceChat.jsx  index.css
src/repl_nix_workspace.egg-info/: PKG-INFO  requires.txt
