[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.13",
    "numpy>=2.3.1",
    "openai>=1.90.0",
    "playwright>=1.52.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "tiktoken>=0.9.0",
    "trafilatura>=2.0.0",
    "uvicorn>=0.34.3",
]
