[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.13",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.24",
    "livekit-plugins-silero>=1.1.3",
    "livekit>=1.0.10",
    "livekit-agents>=1.1.3",
    "livekit-api>=1.0.3",
    "numpy>=2.3.1",
    "openai>=1.90.0",
    "playwright>=1.52.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "tiktoken>=0.9.0",
    "trafilatura>=2.0.0",
    "uvicorn>=0.34.3",
    "aiohttp>=3.12.13",
    "livekit-plugins-openai>=1.1.3",
]
